qa: Replace usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'
"Stream.toList()" method should be used instead of "collectors"
when unmodifiable list needed